   instead.  [SW]
 * isobjid() now requires a full object id (with :ctime), and will return 0
   for simple dbrefs, or objids of destroyed/invalid objects. isdbref() still
   matches both dbrefs and objids. Suggested by Covenent. [MG]
 * @entrances and entrances() now use the same internal routines as @search,
   and have similar (and saner) privs. From a suggestion by Sketch. [MG]

Commands:
 * Added @mail/review for reading mail you've sent, and @mail/retract for
   deleting unread mail that you sent. Idea from MUX. Patch by Minion.
 * @hook/list now shows error messages if you don't have permission to use
   it, or if a command has no hooks, instead of failing silently. Suggested
   by Padraic. [MG]

Functions:
 * Functions that take a sort type argument now accept 'mtime' for
   sorting based on object's modification time. Patch by Minion.
 * New registers() function, like listq() but returns all kinds of registers
   (q-registers, %0-%9 args, iter/switch context, regexp captures). Also
   takes an output separator arg. Suggested by Wiggles. [MG]

Fixes:
 * lit() didn't properly handle '\'s. Reported by Wiggles. [MG]
 * listq() incorrectly returned all registers (including %0-%9, %i0, etc),
   not just %q-registers. Reported by Wiggles. [MG]
 * The mud_url code didn't always work correctly in Firefox because http
   headers weren't sent. [MG]
 * %0 and %1 arguments weren't properly passed through verb attributes after
   a change in p8. Reported by Padraic. [MG]
 * Fix really stupid copy-and-paste error in magic sorts on strings with
   ANSI, which broke setinter() and friends. Reported by Minion. [MG]
 * Help fixes by Wiggles, Mouvar and others. [MG]
 * Memory leak in ldelete() fixed. [MG]
 * Fix a crashbug reported by Minion. [MG]
 * Sorting functions now ignore ANSI when sorting a string as a number
   or dbref. From report by Mouvar. [MG]
 * strreplace() was broken for overly long length arguments. Reported
   by Ashen-Shugar.  [SW]